--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,40 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.navbar {
+  background-color: transparent;
+  color: #0a0a0a;
+  height: 100%;
+  z-index: 1;
+  position: fixed;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: auto;
+  text-align: center;
+}
+.navbar ul { 
+  list-style-type: none;
+  margin: 0;
+  padding: 1.5rem;
+  overflow: hidden;
+  gap: 10px;
+}
+
+.navbar li {
+  background-color: #ffd6d6;
+  color: #000000;
+  height: 100%;
+  width: 100%;
+  border-radius: 8px;
+  padding: 1.3rem 0.5rem;
+  margin: 2rem 0;
+}
+
+.navbar li:hover {
+  background-color: #1f2937; /* Tailwind's gray-800 */
+  color: #f3f4f6; /* Tailwind's gray-100 */
+  cursor: pointer;
+}
+
